<resources>
    <string name="app_name" translatable="false">KMC V2</string>
    <string name="version">Version -</string>
    <string name="databaseName" translatable="false">kmc</string>
    <string name="pleaseWait">Please Wait…</string>
    <string name="errorInternet">Please check your internet connection</string>
    <string name="password">Password</string>
    <string name="shareReportText">Check the Report</string>
    <string name="selectLounge">Select Lounge</string>
    <string name="errorselectLounge">Please select your lounge</string>
    <string name="selectDistrict">Select District </string>
    <string name="errorselectDistrict">Please select your district</string>
    <string name="selectDistrictMand">Select District<font color='red'>*</font></string>
    <string name="selectFacility">Select Facility </string>
    <string name="errorselectFacility">Please select the facility</string>
    <string name="selectFacilityMand">Select Facility<font color='red'>*</font></string>
    <string name="selectFacilityAddress">Select Facility Address</string>
    <string name="errorPassword">Please enter the password</string>
    <string name="selectNurse">Select your name </string>
    <string name="erroselectNurse">Please select your name</string>
    <string name="electNurseMand">Select your name<font color='red'>*</font></string>
    <string name="selectNurseMand">Please select your name<font color='red'>*</font></string>
    <string name="min">/ min</string>
    <string name="exit">Press again to exit</string>
    <string name="help">Help</string>
    <string name="language">हिंदी</string>
    <string name="pleaseLoginToYourLounge">Please login to your Lounge</string>
    <string name="pleaseLogin">Please login</string>
    <string name="english">English</string>
    <string name="a">A</string>
    <string name="अ">अ</string>
    <string name="hindi">हिंदी</string>
    <string name="changeLanguage">Change Language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="dataWillBeLost">Changing the language will delete the entered data</string>
    <string name="splashLine1English">Let’s provide the best </string>
    <string name="splashLine2English">loving care </string>
    <string name="splashLine3English">to\nour mothers and babies.</string>
    <string name="splashLine1Hindi">आइये, अपनी माँओं और शिशुओं की सबसे\nबेहतर</string>
    <string name="splashLine2Hindi">प्यार भरी देखभाल</string>
    <string name="splashLine3Hindi">करें.</string>
    <string name="logout">Logout</string>
    <string name="sync">Sync</string>
    <string name="noDataFound">No data found</string>
    <string name="allNurseCheckedIn">All nurses have already checked-in their lounge.</string>
    <string name="pleaseIdentifyYourself">Please identify yourself.</string>
    <string name="pleaseClickSelfie">Please click a selfie to Check-in</string>
    <string name="pleaseClickLounge">Please click the photo of the lounge</string>
    <string name="pleaseClickSelfieOut">Please click a selfie to Checkout</string>
    <string name="hi">Hi</string>
    <string name="welcome">Welcome to the Lounge!</string>
    <string name="sureToCancel">Process is incomplete, are you sure you want to cancel the process?</string>
    <string name="youHaveCheckedIn">You have checked-in to the</string>
    <string name="to">to</string>
    <string name="slot8am">8 am</string>
    <string name="slot2pm">2 pm</string>
    <string name="slot8pm">8 pm</string>
    <string name="shift">shift</string>
    <string name="birthshift">shift.</string>
    <string name="youHaveCheckedInSlot1">You have checked in to the <font color='red'>8 am</font> to <font color='red'>2 pm shift at</font></string>
    <string name="youHaveCheckedInSlot2">You have checked in to the <font color='red'>2 pm</font> to <font color='red'>8 pm shift at</font></string>
    <string name="youHaveCheckedInSlot3">You have checked in to the <font color='red'>8 pm</font> to <font color='red'>8 am shift at</font></string>
    <string name="at">at</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sorry">Sorry!</string>
    <string name="youAreOnTime">You are on time!</string>
    <string name="youAreLate">You are late!</string>
    <string name="late">Late</string>
    <string name="yourStats">Your stats for this month</string>
    <string name="totalShifts">Total shifts</string>
    <string name="onTime">On Time</string>
    <string name="lounge">Lounge</string>
    <string name="infant">Baby</string>
    <string name="setting">Setting</string>
    <string name="mother">Mother</string>
    <string name="relation">Select Relation</string>
    <string name="errorRelation">Please select the relation with the baby</string>
    <string name="father">Father</string>
    <string name="husband">Husband</string>
    <string name="sister">Sister</string>
    <string name="brother">Brother</string>
    <string name="grandMother">Grand Mother</string>
    <string name="grandFather">Grand Father</string>
    <string name="uncle">Uncle</string>
    <string name="aunty">Aunty</string>
    <string name="otherRelative">Other relatives (please specify)</string>
    <string name="otherSpecify">Other (please specify)</string>
    <string name="admission">Admission</string>
    <string name="motherAdmission">Mother Admission</string>
    <string name="babyAdmission">Baby Admission</string>
    <string name="assessment">Assessment</string>
    <string name="checkList">Checklist<font color='red'>*</font></string>
    <string name="checkListbithoutStirck">Checklist</string>
    <string name="guardianNameMand">Guardian\'s name<font color='red'>*</font></string>
    <string name="contactNumberMand">Phone Number<font color='red'>*</font></string>
    <string name="organisationNameMand">Organisation\'s name<font color='red'>*</font></string>
    <string name="organisationNumberMand">Organisation\'s number<font color='red'>*</font></string>
    <string name="organisationAddressMand">Organisation\'s address<font color='red'>*</font></string>
    <string name="hospitalRegistrationNumberMand">Registration Number provided from the hospital<font color='red'>*</font></string>
    <string name="motherRegistrationNumber">Registration Number provided from the hospital<font color='red'>*</font></string>
    <string name="RegistrationNumber">Registration Number</string>
    <string name="hospitalRegistrationNumber">Registration Number provided from the hospital</string>
    <string name="relationWithChildMand">Relationship with Child<font color='red'>*</font></string>
    <string name="errorrelationWithChildMand">Please specify the relationship with child</string>
    <string name="relationWithMotherMand">Relation\nwith mother<font color='red'>*</font></string>
    <string name="motherNameMand">Mother\'s name<font color='red'>*</font></string>
    <string name="clickHerPhotoMand">Please take consent from Mother for her photo<font color='red'>*</font></string>
    <string name="pleaseTellMother">Please take consent from Mother for her photo</string>
    <string name="pleaseClickBabyPhoto">Please take the permission of the mother/ guardian, then click the photo of the baby</string>
    <string name="pleaseClickBabyPhotoGuardian">Please take the permission of the mother/ guardian, then click the photo of the baby </string>
    <string name="clickBabyPhotoMand">Click the picture of the baby <font color='red'>*</font></string>
    <string name="deliveryDate">Delivery date</string>
    <string name="deliveryDateMand">Delivery date<font color='red'>*</font></string>
    <string name="lmpDate">LMP( last menstrual period) Date<font color='red'>*</font></string>
    <string name="lmpDateWithoutAsterick">LMP( last menstrual period) Date</string>
    <string name="deliveryTime">Delivery time<font color='red'>*</font></string>
    <string name="babyBirthWeight">Baby\'s birth weight<font color='red'>*</font></string>
    <string name="gender">Gender<font color='red'>*</font></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ambiguous">Ambiguous</string>
    <string name="deliveryType">Delivery Type<font color='red'>*</font></string>
    <string name="pleaseTakePermissionFromMother">Please inform all the resident mothers, and click a picture of the Lounge such that all the beds are visible.</string>
    <string name="iHaveTakenPermission">I have taken permission from mothers before clicking the picture.</string>
    <string name="clickImage">Click Image</string>
    <string name="itIsImpToMaintaneTemp">It is very important to maintain a stable temperature in the Lounge between 27-30°C</string>
    <string name="whatIsTempRecorded">What is the temperature recorded by the wall- mounted thermometer in the Lounge?</string>
    <string name="tickHereIfThermoNotWorking">Tick here if Lounge thermometer is not working</string>
    <string name="tooWarm">Too warm! Please check if the A/C is working and has the right temperature setting.</string>
    <string name="tooCold">Too cold! Please adjust the A/C or use room heater to warm the room.</string>
    <string name="tempIsGood">Lounge temperature is good!</string>
    <string name="loungeThermoNotWorking">Lounge thermometer is not working. Please notify concerned authority to get it repaired/ replaced ASAP.</string>
    <string name="theseBabyAreFragile">These babies are very fragile and can easily get infection. Observe the safety of the Lounge. </string>
    <string name="noPadsFilthLying">No pads/ filth is lying around.</string>
    <string name="outsideShoesAreNotWorn">Outside shoes are not being worn inside the lounge.</string>
    <string name="thereIsNoOneInside">There is no one inside the lounge who has visible signs of infection.</string>
    <string name="handSanitizersAvailable">Hand sanitizers are available and accessible to everyone.</string>
    <string name="generalCleanliness">General cleanliness and hygiene are maintained inside the lounge.</string>
    <string name="noMyLoungeWasUnsafe">No! My lounge was unsafe when I checked-in.</string>
    <string name="yesMyLoungeWasSafe">Yes! My Lounge was safe when I checked-in.</string>
    <string name="notApplicableShortValue" translatable="false">N/A</string>
    <string name="vitalSigns">Vital Signs</string>
    <string name="generalExamination">General Examination</string>
    <string name="respiratoryAssessment">Respiratory Assessment</string>
    <string name="feedingAssessment">Feeding Assessment</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="temperature">Temperature</string>
    <string name="respiratoryCount">Respiratory Count</string>
    <string name="spo2">SpO2</string>
    <string name="pulseRate">Pulse Rate</string>
    <string name="isCrt3"><![CDATA[ Please select CRT Accordingly ]]></string>
    <string name="alertness">Alertness</string>
    <string name="tone">Muscle Tone</string>
    <string name="color">Color</string>
    <string name="apnea">Apnea</string>
    <string name="grunting">Grunting</string>
    <string name="chestIndrawing">Chest Indrawing</string>
    <string name="interestInFeedingMandResult">Interest in feeding</string>
    <string name="suckingMandResult">The way baby is Sucking</string>
    <string name="umbilicusResult">Umbilicus of baby</string>
    <string name="bulgingAnteriorFontanelleMandResult">Bulging Anterior Fontanelle</string>
    <string name="skin">Skin</string>
    <string name="skinNew">Skin Rash or Pustules</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="assessmentBy">Assessment by</string>
    <string name="routineAssessment">Routine Assessment</string>
    <string name="details">Details</string>
    <string name="docotorNotes">Doctor\'s comment</string>
</resources>