<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:text="@string/routineAssessment"
        android:textColor="@color/oo_color"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:textSize="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/rectangle_lightgrey_outline"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/lightgreyback"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/lightgreyback"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/details"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/lightgreyback"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/assessmentBy"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/black"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAssessment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        android:background="@drawable/rectangle_white_round"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="DuplicateIds">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_doctor_notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/docotorNotes"
                android:textColor="@color/blackNew"
                android:textSize="@dimen/_7sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/etDoctorNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@+id/ll1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/blackNew"
            android:hint="@string/notApplicableShortValue"
            android:maxLines="4"
            android:textSize="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            android:minHeight="@dimen/_40sdp"
            android:background="@drawable/rectangle_grey_round_new"
            tools:ignore="SpUsage" />

    </RelativeLayout>

</LinearLayout>